project(libpussy)

set(CMAKE_C_COMPILER clang-16)
set(CMAKE_C_STANDARD 23)
set(CMAKE_C_STANDARD_REQUIRED ON)

add_compile_options(-Wall -Wextra -pedantic -Werror -Wno-gnu -Wno-unused-parameter -Wno-format-pedantic)

if(DEFINED ENV{DEBUG})
    add_compile_options(-g)
else()
    add_compile_options(-O2)
endif()

add_library(pussy STATIC
    src/allocator.c
    src/allocator_pet.c
    src/allocator_debug.c
    src/allocator_stdlib.c
    src/dump_bitmap.c
    src/dump_hex.c
    src/sync_event.c
    src/timespec.c
)

target_include_directories(pussy PUBLIC . include libpussy)

# common definitions

#set(common_defs_targets pussy test_pussy)
set(common_defs_targets pussy)

foreach(TARGET ${common_defs_targets})

    if(DEFINED ENV{DEBUG})
        target_compile_definitions(${TARGET} PUBLIC DEBUG)
    endif()

endforeach(TARGET)
